--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
     <title>Главная</title>
     <link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header>
+    <header class="">
         <nav>
-            <a href="#"><span>Web</span>Studio</a>
+            <a class="logo" href="#"><span class="logo-text">Web</span>Studio</a>
             <ul>
-                <li><a href="#">Студия</a></li>
-                <li><a href="portfolio.html">Портфолио</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li class="nav-title"><a  class="nav-link" href="#">Студия</a></li>
+                <li><a  class="nav-link" href="portfolio.html">Портфолио</a></li>
+                <li><a  class="nav-link" href="#address">Контакты</a></li>
             </ul>
         </nav>
 
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a  class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li"><a  class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
     </header>
 
     <main>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button>Заказать услугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button class="hero-btn">Заказать услугу</button>
         </section>
 
         <section>
@@ -64,8 +64,8 @@
             </ul>
         </section>
         
-        <section>
-            <h2>Наша команда</h2>
+        <section class="command">
+            <h2 class="">Наша команда</h2>
             <ul>
                 <li>
                     <img src="./images/img1.jpg" width="300" alt="img">
@@ -91,13 +91,13 @@
         </section>
     </main>
 
-    <footer>
-        <section>
-            <a href=""><span>Web</span>Studio</a>
+    <footer class="footer">
+        <section class="" id="address">
+            <a class="footer-logo" href=""><span class="logo-text">Web</span>Studio</a>
             <address>
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <a href="mailto:info@example.com">info@example.com</a>
-                <a href="tel:+380991111111">+38 099 111 11 11</a>
+                <a class="footer-link" href="mailto:info@example.com">info@example.com</a>
+                <a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a>
             </address>
         </section>
     </footer>
