add color final

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,67 +33,67 @@
             <!-- <h2>Проекты</h2> -->
             <ul>
                 <li>
-                    <button>Все</button>
+                    <button class="project-btn">Все</button>
                 </li>
                 <li>
-                    <button>Веб-сайты</button>
+                    <button class="project-btn">Веб-сайты</button>
                 </li>
                 <li>
-                    <button>Приложения</button>
+                    <button class="project-btn">Приложения</button>
                 </li>
                 <li>
-                    <button>Дизайн</button>
+                    <button class="project-btn">Дизайн</button>
                 </li>
                 <li>
-                    <button>Маркетинг</button>
+                    <button class="project-btn">Маркетинг</button>
                 </li>
             </ul>
         
             <ul>
-                <li>
+                <li class="project-item">
                     <img src="./images/img_1.jpg" alt="img">
-                    <p>Технокряк</p>
-                    <p>Веб-сайт</p>
+                    <p class="project-title">Технокряк</p>
+                    <p class="project-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/img_2.jpg" alt="img">
-                    <p>Постер New Orlean vs Golden Star</p>
-                    <p>Дизайн</p>
+                    <p class="project-title">Постер New Orlean vs Golden Star</p>
+                    <p class="project-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/img_3.jpg" alt="img">
-                    <p>Ресторан Seafood</p>
-                    <p>Приложение</p>
+                    <p class="project-title">Ресторан Seafood</p>
+                    <p class="project-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/img_4.jpg" alt="img">
-                    <p>Проект Prime</p>
-                    <p>Маркетинг</p>
+                    <p class="project-title">Проект Prime</p>
+                    <p class="project-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/img_5.jpg" alt="img">
-                    <p>Проект Boxes</p>
-                    <p>Приложение</p>
+                    <p class="project-title">Проект Boxes</p>
+                    <p class="project-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/img_6.jpg" alt="img">
-                    <p>Inspiration has no Borders</p>
-                    <p>Веб-сайт</p>
+                    <p class="project-title">Inspiration has no Borders</p>
+                    <p class="project-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/img_7.jpg" alt="img">
-                    <p>Издание Limited Edition</p>
-                    <p>Дизайн</p>
+                    <p class="project-title">Издание Limited Edition</p>
+                    <p class="project-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/img_8.jpg" alt="img">
-                    <p>Проект LAB</p>
-                    <p>Маркетинг</p>
+                    <p class="project-title">Проект LAB</p>
+                    <p class="project-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/img_9.jpg" alt="img">
-                    <p>Growing Business</p>
-                    <p>Приложение</p>
+                    <p class="project-title">Growing Business</p>
+                    <p class="project-text">Приложение</p>
                 </li>
             </ul>
         </section>
