--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
         </section>
 
         <section>
-            <!-- <h2></h2> -->
+            <!-- <h2>Особенности</h2> -->
             <ul>
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="features-title">Внимание к деталям</h3>
+                    <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="features-title">Пунктуальность</h3>
+                    <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h class="features-title"3>Планирование</h>
+                    <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="features-title">Современные технологии</h3>
+                    <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -65,27 +65,27 @@
         </section>
         
         <section class="command">
-            <h2 class="">Наша команда</h2>
+            <h2 class="command-title">Наша команда</h2>
             <ul>
                 <li>
                     <img src="./images/img1.jpg" width="300" alt="img">
-                    <p>Игорь Демьяненко</p>
-                    <p>Product Designer</p>
+                    <p class="command-name">Игорь Демьяненко</p>
+                    <p class="command-text">Product Designer</p>
                </li>
                 <li>
                     <img src="./images/img2.jpg" width="300" alt="img">
-                    <p>Ольга Репина</p>
-                    <p>Frontend Developer</p>
+                    <p class="command-name">Ольга Репина</p>
+                    <p class="command-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img3.jpg" width="300" alt="img">
-                    <p>Николай Тарасов</p>
-                    <p>Marketing</p>
+                    <p class="command-name">Николай Тарасов</p>
+                    <p class="command-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img4.jpg" width="300" alt="img">
-                    <p>Михаил Ермаков</p>
-                    <p>UI Designer</p>
+                    <p class="command-name">Михаил Ермаков</p>
+                    <p class="command-text">UI Designer</p>
                 </li>
             </ul>
         </section>
