--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <ul>
                 <li><a  class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li"><a  class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a  class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
     </header>
 
@@ -45,7 +45,7 @@
                     <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h class="features-title"3>Планирование</h>
+                    <h3 class="features-title">Планирование</h3>
                     <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
