--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 
     <footer class="footer">
         <section class="" id="address">
+            <!-- <h2>Контакты</h2> -->
             <a class="footer-logo" href=""><span class="logo-text">Web</span>Studio</a>
             <address>
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
