--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
         </section>
 
         <section>
-            <!-- <h2>Особенности</h2> -->
+            <h2 class="features-title">Особенности</h2>
             <ul>
                 <li>
-                    <h3 class="features-title">Внимание к деталям</h3>
+                    <h3 class="features-item">Внимание к деталям</h3>
                     <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3 class="features-title">Пунктуальность</h3>
+                    <h3 class="features-item">Пунктуальность</h3>
                     <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3 class="features-title">Планирование</h3>
+                    <h3 class="features-item">Планирование</h3>
                     <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3 class="features-title">Современные технологии</h3>
+                    <h3 class="features-item">Современные технологии</h3>
                     <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -93,7 +93,7 @@
 
     <footer class="footer">
         <section class="" id="address">
-            <!-- <h2>Контакты</h2> -->
+            <h2 class="contact-title">Контакты</h2>
             <a class="footer-logo" href=""><span class="logo-text">Web</span>Studio</a>
             <address>
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
