--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 </head>
 
 <body>
-    <header class="">
+    <header class="header">
         <nav>
             <a class="logo" href="#"><span class="logo-text">Web</span>Studio</a>
             <ul>
                 <li class="nav-title"><a  class="nav-link" href="#">Студия</a></li>
-                <li><a  class="nav-link" href="portfolio.html">Портфолио</a></li>
-                <li><a  class="nav-link" href="#address">Контакты</a></li>
+                <li class="nav-title"><a  class="nav-link" href="portfolio.html">Портфолио</a></li>
+                <li class="nav-title"><a  class="nav-link" href="#address">Контакты</a></li>
             </ul>
         </nav>
 
             <ul>
-                <li><a  class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a  class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
     </header>
 
@@ -56,11 +56,11 @@
         </section>
 
         <section>
-            <h2>Чем мы занимаемся</h2>
+            <h2 class="occupation-title">Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/box1.jpg" alt="img"></li>
-                <li><img src="./images/box2.jpg" alt="img"></li>
-                <li><img src="./images/box3.jpg" alt="img"></li>
+                <li class="occupation-img"><img src="./images/box1.jpg" alt="img"></li>
+                <li class="occupation-img"><img src="./images/box2.jpg" alt="img"></li>
+                <li class="occupation-img"><img src="./images/box3.jpg" alt="img"></li>
             </ul>
         </section>
         
@@ -96,7 +96,7 @@
             <h2 class="contact-title">Контакты</h2>
             <a class="footer-logo" href=""><span class="logo-text">Web</span>Studio</a>
             <address>
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
                 <a class="footer-link" href="mailto:info@example.com">info@example.com</a>
                 <a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a>
             </address>
