--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
-    <link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header class="header">
         <nav>
-            <a class="logo" href="#"><span class="logo-text">Web</span>Studio</a>
+            <a class="logo" href="index.html"><span class="logo-text">Web</span>Studio</a>
             <ul>
-                <li class="nav-title"><a  class="nav-link" href="#">Студия</a></li>
+                <li class="nav-title"><a  class="nav-link" href="index.html">Студия</a></li>
                 <li class="nav-title"><a  class="nav-link" href="portfolio.html">Портфолио</a></li>
                 <li class="nav-title"><a  class="nav-link" href="#address">Контакты</a></li>
             </ul>
