--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
-    <link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
     
@@ -17,7 +17,7 @@
             <a class="logo" href="index.html"><span class="logo-text">Web</span>Studio</a>
             <ul>
                 <li class="nav-title"><a  class="nav-link" href="index.html">Студия</a></li>
-                <li class="nav-title"><a  class="nav-link" href="#">Портфолио</a></li>
+                <li class="nav-title"><a  class="nav-link" href="portfolio.html">Портфолио</a></li>
                 <li class="nav-title"><a  class="nav-link" href="#address">Контакты</a></li>
             </ul>
         </nav>
@@ -102,7 +102,7 @@
     <footer class="footer">
         <section class="" id="address">
             <h2 class="contact-title">Контакты</h2>
-            <a class="footer-logo" href=""><span class="logo-text">Web</span>Studio</a>
+            <a class="footer-logo" href="index.html"><span class="logo-text">Web</span>Studio</a>
             <address>
                 <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
                 <a class="footer-link" href="mailto:info@example.com">info@example.com</a>
